fix: solucion de bug con vaciar lista en favourite-list, y que las ofertas no salian con el precio rebajado en la misma, favourite-list.component

--- a/Films/src/app/components/favourite-list/favourite-list.component.css
+++ b/Films/src/app/components/favourite-list/favourite-list.component.css
@@ -176,6 +176,8 @@
     width: 115px; /* Ancho que alcanza el botón al hacer hover */
     border-radius: 10%;
     background-color:aliceblue;
+    display: flex;
+    flex-direction: column;
 }
   
   /* Deslizar logo y mostrar precio */
