--- a/Films/src/app/components/film-detail/film-detail.component.html
+++ b/Films/src/app/components/film-detail/film-detail.component.html
@@ -23,7 +23,8 @@
         <h3 class="data"> <span class="title-data">RATING:</span> {{movie.rating}} </h3>
         <img class="star" src="/assets/star.png" alt="">
       </div>
-      <h3 class="data price"><span class="title-data">PRICE:     </span>${{movie.precio}} </h3>
+      <h3 class="data price"  *ngIf = "movie.precio < 1500"><span class="title-data">PRICE:     </span>${{movie.precio}} </h3>
+      <h3 class="data price"  *ngIf = "movie.precio > 1500"><span class="title-data">PRICE:     </span>${{movie.precio/2}} </h3>
 
       <div *ngIf="isLoggedIn && !isAdmin">
         <div class="box-carrito">
