--- a/Films/src/app/components/favourite-list/favourite-list.component.html
+++ b/Films/src/app/components/favourite-list/favourite-list.component.html
@@ -25,8 +25,9 @@
           <button class="button ficha-tecnica" (click)="navegarFilmDetail(film.rank)">Detalles</button>
           <button class="button btn-carrito" (click)="agregarPeliculaAlCarrito(film)">
             <img class="carrito-logo" src="/assets/carrito.png" alt="">
-              <span class="precio"><s>$ {{ film.precio }}</s></span>
-              <span class="precio" *ngIf = "film.precio > 1500" >$ {{ film.precio/2 }}</span>
+            <span *ngIf = "film.precioDescuento == undefined" class="precio">$ {{ film.precio }}</span>
+            <span *ngIf = "film.precioDescuento > 0" class="precio">$ <s>{{ film.precio }}</s></span>
+            <span *ngIf = "film.precioDescuento > 0" class="precio">$ {{ film.precioDescuento }}</span>
           </button>
         </div>
       </div>
