--- a/Films/src/app/components/ofertas/ofertas.component.html
+++ b/Films/src/app/components/ofertas/ofertas.component.html
@@ -23,8 +23,8 @@
           <button class="button ficha-tecnica" (click)="navegarFilmDetail(film.rank)">Detalles</button>
           <button *ngIf = "isLoggedIn && !isAdmin" class="button btn-carrito" (click)="agregarPeliculaAlCarrito(film)">
             <img class="carrito-logo" src="/assets/carrito.png" alt="">
-            <span class="precio"><s>$ {{ film.precio }}</s></span>
-            <span class="precio">$ {{ film.precio/2 }}</span>
+            <span *ngIf = "film.precioDescuento > 0" class="precio"><s>$ {{ film.precio }}</s></span>
+            <span class="precio">$ {{ film.precioDescuento }}</span>
           </button>
         </div>
       </div>
