--- a/Films/src/app/components/entregas-pendientes/entregas-pendientes.component.html
+++ b/Films/src/app/components/entregas-pendientes/entregas-pendientes.component.html
@@ -34,5 +34,11 @@
       <p class="text-empty">No hay entregas pendientes.</p>
     </div>
   </ng-template>
+
+  <div *ngIf="isLoading" class="loading-overlay">
+    <div class="loading-content">
+      <div class="spinner"></div>
+    </div>
+  </div>
 </section>
 
