fix: editar reseña ya no deja enviar en vacio.

--- a/Films/src/app/components/alternative-options/alternative-options/alternative-options.component.html
+++ b/Films/src/app/components/alternative-options/alternative-options/alternative-options.component.html
@@ -38,7 +38,7 @@
     <div *ngIf = "isLoggedIn">
         <div *ngIf = "isAdmin">
             <div class="box-users">
-                <button class="button" (click)="navegar('showUsers')">Users</button>
+                <button class="button" (click)="navegar('showUsers')">Usuarios</button>
             </div>
         </div>
     </div>
