--- a/Films/src/app/components/login/login.component.html
+++ b/Films/src/app/components/login/login.component.html
@@ -10,16 +10,16 @@
               <input 
                 type="text" 
                 class="form-control no-border input"
-                [class.is-invalid]="loginForm.get('email')?.invalid && loginForm.get('email')?.touched" 
+                [class.is-invalid]="loginForm.get('email')?.invalid && (loginForm.get('email')?.dirty || loginForm.get('email')?.touched)" 
                 id="email" 
                 name="email" 
                 formControlName="email"
                 placeholder="Ingrese su email" 
                 required>
               <div class="invalid-feedback">
-                <div *ngIf="loginForm.get('email')?.touched && loginForm.get('email')?.hasError('required')">El email es requerido.</div>
-                <div *ngIf="loginForm.get('email')?.touched && loginForm.get('email')?.hasError('email')">El formato del email es incorrecto.</div>
-                <div *ngIf="loginForm.get('email')?.touched && loginForm.get('email')?.hasError('pattern')">Dominio incorrecto.</div>
+                <div *ngIf="loginForm.get('email')?.hasError('required')">El email es requerido.</div>
+                <div *ngIf="loginForm.get('email')?.hasError('email')">El formato del email es incorrecto.</div>
+                <div *ngIf="loginForm.get('email')?.hasError('pattern')">Dominio incorrecto.</div>
               </div>
             </div>
             <div class="form-group mb-4">
